# Clip

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  CaptureOverlay.tsx  clipUtils.ts  emojis.ts  main.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  downloader.rs  lib.rs  localsend.rs  store.rs
src/components/: AmbientBackdrop.tsx  ClipCard.tsx  ContextMenu.tsx  DownloaderView.tsx  EmojiView.tsx  SettingsView.tsx  TopBar.tsx  VirtualClipStrip.tsx
src/hooks/: useDragScroll.ts
