[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
# All pure-Rust decoders the crate offers (no native codec deps). HEIC/HEIF
# still isn't covered by any Rust crate without a heavy native codec — that
# one's handled by falling back to Windows' own WIC decoder (see localsend.rs
# neighbor `thumbnail_image_file`), which also covers it license-free.
image = { version = "0.25", default-features = false, features = [
    "avif", "bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png",
    "pnm", "qoi", "tga", "tiff", "webp",
] }
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
tiny_http = { version = "0.12.0", features = ["ssl-rustls"] }
# LocalSend's real apps require HTTPS (self-signed, fingerprint-based trust —
# not a CA chain), so both the server (tiny_http) and client (ureq) need TLS.
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
rcgen = "0.14.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
window-vibrancy = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Networking_WinSock",
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
] }

